--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
     </header>
 
     <!-- 2.Hero -->
-    <main class="hero"> </main>
+    <main>
+      <div class="hero padding hero--left">
+        <h1>Travelling Comes With Endless Discoveries</h1>
+        <p>Don't let your dreams be just dreams. Experience the world by booking a vacation with us now.</p>
+        <button>Get started</button>
+      </div>
+      <div class="hero hero--right"><img class="size" src="./assets/images/hero.png" alt="a tracked plane flying around a globe"></div>
+      </main>
 
     <!-- 3.Recommendations
 -One card for each destination
