--- a/pages/greece.html
+++ b/pages/greece.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/global.css" />
+    <!-- <link rel="stylesheet" href="../css/global.css" /> -->
     <link rel="stylesheet" href="../css/destinations.css" />
     <title>Greece</title>
   </head>
@@ -18,6 +18,14 @@ Saturday
 Sunday 
 Itinerary Cards: MUST use an unordered list for the itinerary activities
 Reuse as much styling and code as possible (e.g. Destination Cards and Itinerary cards), and build your project around common component code that you can reuse if possible.
+Destination Pages:
+
+They must have a title with the destination name
+The provided image asset for the destination must take up the full width/height of the background for the page.
+They must have 3 Days of Itinerary activities including:
+A title for the day of the week
+4 Itinerary activities (e.g. Breakfast, Lunch, Dinner, Snorkeling)
+Activities must have a background of #FEFAF5
 -->
     <main></main>
 
