minor fixes on cards, added a footer base structure

--- a/index.html
+++ b/index.html
@@ -85,18 +85,72 @@ Recommendations Destination Cards: MUST use the <a> tag around the cards in orde
             <a class="card__link" href="./pages/hawaii.html"></a></li>
         </ul> -->
 
-        <div class="card card-img destination__title--1"><h1 class="card__title">Hawaii</h1><a class="card__link" href="./pages/hawaii.html"></a></div>
-        <div class="card card-img destination__title--2"><h1 class="card__title"><h1>Iceland</h1><a class="card__link" href="./pages/iceland.html"></a></div>
-        <div class="card card-img destination__title--3"><h1>Greece</h1><a class="card__link" href="./pages/greece.html"></a></div>
+        <div class="card card-img destination__title--1">
+          <h1 class="card__title">Hawaii</h1>
+          <a class="card__link" href="./pages/hawaii.html"></a>
+        </div>
+        <div class="card card-img destination__title--2">
+          <h1 class="card__title">Iceland</h1>
+          <a class="card__link" href="./pages/iceland.html"></a>
+        </div>
+        <div class="card card-img destination__title--3">
+          <h1>Greece</h1>
+          <a class="card__link" href="./pages/greece.html"></a>
+        </div>
       </div>
     </section>
 
     <!-- 4.Footer universal for all 
     Each page MUST have an identical footer -->
-    <footer>
-      <section class="contact"><h1>Contact</h1></section>
-      <section class="hours"><h1>Hours</h1></section>
-      <section class="social"><h1>Social</h1></section>
+    <footer class="footer">
+      <section class="footer__item">
+        <h1 class="footer__title">Contact</h1>
+        <ul>
+          <li class="footer__subtitle">Email</li>
+          <li>info@travelsite.com</li>
+        </ul>
+      </section>
+      <section class="footer__item"><h1>Hours</h1>
+      <ul>
+        <li class="footer__subtitle">MONDAY - FRIDAY</li>
+        <li>9:00 AM - 5:00 PM</li>
+        
+        <li class="footer__subtitle">SATURDAY</li>
+        <li>10:00 AM - 4:00 PM</li>
+        
+        <li class="footer__subtitle">SUNDAY</li>
+        <li>Closed</li>
+      </ul>
+    </section>
+      <section class="footer__item">
+        <h1 class="footer__title">Social</h1>
+        <ul class="social__list">
+          <li>
+            <a href="https://www.instagram.com/"
+              ><img
+                class="social__img"
+                src="./assets/icons/icon-instagram.png"
+                alt="Instagram icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/"
+              ><img
+                class="social__img"
+                src="./assets/icons/icon-facebook.png"
+                alt="Facebook icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/?lang=en"
+              ><img
+                class="social__img"
+                src="./assets/icons/icon-twitter.png"
+                alt="twitter icon"
+            /></a>
+          </li>
+        </ul>
+      </section>
     </footer>
   </body>
 </html>
