--- a/index.html
+++ b/index.html
@@ -102,60 +102,63 @@ Recommendations Destination Cards: MUST use the <a> tag around the cards in orde
 
     <!-- 4.Footer universal for all 
     Each page MUST have an identical footer -->
-    <footer class="footer">
-      <div>
-        <section>
-          <h1 class="footer__title">Contact</h1>
-          <ul class="footer__item">
-            <li class="footer__subtitle">Email</li>
-            <li>info@travelsite.com</li>
-          </ul>
-        </section>
-        <section>
-          <h1 class="footer__title">Hours</h1>
-          <ul class="footer__item">
+    <footer>
+      <!-- 1 -->
+      <section class="section section--edge">
+        <h1>Contact</h1>
+        <ul class="footer__item footer__item--column">
+          <li class="footer__subtitle">Email</li>
+          <li>info@travelsite.com</li>
+        </ul>
+      </section>
+      <!-- 2 -->
+      <section class="section section--middle">
+        <h1>Hours</h1>
+        <ul class="footer__item">
+          <div>
             <li class="footer__subtitle">MONDAY - FRIDAY</li>
             <li>9:00 AM - 5:00 PM</li>
-
+          </div>
+          <div>
             <li class="footer__subtitle">SATURDAY</li>
             <li>10:00 AM - 4:00 PM</li>
-
+          </div>
+          <div>
             <li class="footer__subtitle">SUNDAY</li>
             <li>Closed</li>
-          </ul>
-        </section>
-        <section>
-          <h1 class="footer__title">Social</h1>
-          <ul class="social__list">
-            <div class="footer__item">
-              <li>
-                <a href="https://www.instagram.com/"
-                  ><img
-                    class="social__img"
-                    src="./assets/icons/icon-instagram.png"
-                    alt="Instagram icon"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/"
-                  ><img
-                    class="social__img"
-                    src="./assets/icons/icon-facebook.png"
-                    alt="Facebook icon"
-                /></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/?lang=en"
-                  ><img
-                    class="social__img"
-                    src="./assets/icons/icon-twitter.png"
-                    alt="twitter icon"
-                /></a>
-              </li>
-            </div>
-          </ul>
-        </section>
-      </div>
+          </div>
+        </ul>
+      </section>
+      <!-- 3 -->
+      <section class="section section--edge">
+        <h1>Social</h1>
+        <ul class="footer__item">
+          <li>
+            <a href="https://www.instagram.com/"
+              ><img
+                class="social__img"
+                src="./assets/icons/icon-instagram.png"
+                alt="Instagram icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/"
+              ><img
+                class="social__img"
+                src="./assets/icons/icon-facebook.png"
+                alt="Facebook icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/?lang=en"
+              ><img
+                class="social__img"
+                src="./assets/icons/icon-twitter.png"
+                alt="twitter icon"
+            /></a>
+          </li>
+        </ul>
+      </section>
     </footer>
   </body>
 </html>
