--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -46,62 +46,64 @@
     <!-- 4.Footer universal for all 
     Each page MUST have an identical footer -->
     <footer>
-      <!-- 1 -->
-      <section class="section section--edge">
-        <h1>Contact</h1>
-        <ul class="footer__item footer__item--column">
-          <li class="footer__subtitle">Email</li>
-          <li>info@travelsite.com</li>
-        </ul>
-      </section>
-      <!-- 2 -->
-      <section class="section section--middle">
-        <h1>Hours</h1>
-        <ul class="footer__item">
-          <div>
-            <li class="footer__subtitle">MONDAY - FRIDAY</li>
-            <li>9:00 AM - 5:00 PM</li>
-          </div>
-          <div>
-            <li class="footer__subtitle">SATURDAY</li>
-            <li>10:00 AM - 4:00 PM</li>
-          </div>
-          <div>
-            <li class="footer__subtitle">SUNDAY</li>
-            <li>Closed</li>
-          </div>
-        </ul>
-      </section>
-      <!-- 3 -->
-      <section class="section section--edge">
-        <h1>Social</h1>
-        <ul class="footer__item">
-          <li>
-            <a href="https://www.instagram.com/"
-              ><img
-                class="social__img"
-                src="../assets/icons/icon-instagram.png"
-                alt="Instagram icon"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/"
-              ><img
-                class="social__img"
-                src="../assets/icons/icon-facebook.png"
-                alt="Facebook icon"
-            /></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/?lang=en"
-              ><img
-                class="social__img"
-                src="../assets/icons/icon-twitter.png"
-                alt="twitter icon"
-            /></a>
-          </li>
-        </ul>
-      </section>
+      <div class="footer__parent">
+        <!-- 1 -->
+        <section class="section section--edge">
+          <h1>Contact</h1>
+          <ul class="footer__item footer__item--column">
+            <li class="footer__subtitle">Email</li>
+            <li class="footer__text">info@travelsite.com</li>
+          </ul>
+        </section>
+        <!-- 2 -->
+        <section class="section section--middle">
+          <h1>Hours</h1>
+          <ul class="footer__item">
+            <div>
+              <li class="footer__subtitle">MONDAY - FRIDAY</li>
+              <li class="footer__text">9:00 AM - 5:00 PM</li>
+            </div>
+            <div>
+              <li class="footer__subtitle">SATURDAY</li>
+              <li class="footer__text">10:00 AM - 4:00 PM</li>
+            </div>
+            <div>
+              <li class="footer__subtitle">SUNDAY</li>
+              <li class="footer__text">Closed</li>
+            </div>
+          </ul>
+        </section>
+        <!-- 3 -->
+        <section class="section section--edge">
+          <h1>Social</h1>
+          <ul class="footer__item">
+            <li>
+              <a href="https://www.instagram.com/"
+                ><img
+                  class="social__img"
+                  src="../assets/icons/icon-instagram.png"
+                  alt="Instagram icon"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img
+                  class="social__img"
+                  src="../assets/icons/icon-facebook.png"
+                  alt="Facebook icon"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/?lang=en"
+                ><img
+                  class="social__img"
+                  src="../assets/icons/icon-twitter.png"
+                  alt="twitter icon"
+              /></a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
