hawaii page all set

--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/destinations.css" />
     <title>Hawaii</title>
   </head>
@@ -39,8 +40,49 @@ Saturday
 Sunday 
 Itinerary Cards: MUST use an unordered list for the itinerary activities
 Reuse as much styling and code as possible (e.g. Destination Cards and Itinerary cards), and build your project around common component code that you can reuse if possible.
+
+They must have 3 Days of Itinerary activities including:
+A title for the day of the week
+4 Itinerary activities (e.g. Breakfast, Lunch, Dinner, Snorkeling)
+Activities must have a background of #FEFAF5
 -->
-    <main></main>
+    <main>
+      <div class="main-parent">
+        <section>
+          <h1 class="title">Hawaii</h1>
+          <div class="card-parent">
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Friday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Snorkeling</div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Saturday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Snorkeling</div>
+              </div>
+            </div>
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Sunday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Snorkeling</div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
 
     <!-- Footer (Same as Home Page) -->
     <!-- 4.Footer universal for all 
