destination pages set

--- a/pages/greece.html
+++ b/pages/greece.html
@@ -48,7 +48,43 @@ A title for the day of the week
 4 Itinerary activities (e.g. Breakfast, Lunch, Dinner, Snorkeling)
 Activities must have a background of #FEFAF5
 -->
-    <main></main>
+     <main>
+      <div class="main-parent--greece">
+        <section>
+          <h1 class="title">Greece</h1>
+          <div class="card-parent">
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Friday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Dancing</div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Saturday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Dancing</div>
+              </div>
+            </div>
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Sunday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Dancing</div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
 
     <!-- Footer (Same as Home Page) -->
     <!-- 4.Footer universal for all 
