--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -47,7 +47,7 @@ A title for the day of the week
 Activities must have a background of #FEFAF5
 -->
     <main>
-      <div class="main-parent">
+      <div class="main-parent--hawaii">
         <section>
           <h1 class="title">Hawaii</h1>
           <div class="card-parent">
