--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -40,7 +40,43 @@
     Itinerary Cards: MUST use an unordered list for the itinerary activities
     Reuse as much styling and code as possible (e.g. Destination Cards and Itinerary cards), and build your project around common component code that you can reuse if possible.
     -->
-    <main></main>
+      <main>
+      <div class="main-parent--iceland">
+        <section>
+          <h1 class="title">Iceland</h1>
+          <div class="card-parent">
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Friday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Hiking</div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Saturday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Hiking</div>
+              </div>
+            </div>
+            <div class="card">
+              <div>
+                <div class="card__item card__item-title"><h3>Sunday</h3></div>
+                <div class="card__item card__item-text">Breakfast</div>
+                <div class="card__item card__item-text">Lunch</div>
+                <div class="card__item card__item-text">Dinner</div>
+                <div class="card__item card__item-text">Hiking</div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
 
     <!-- Footer (Same as Home Page) -->
     <!-- 4.Footer universal for all 
