minor adjustments, sass &-combos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           Don't let your dreams be just dreams. Experience the world by booking
           a vacation with us now.
         </p>
-        <div><button>Get started</button></div>
+        <div>
+          <a href="#"><button>Get started</button></a>
+        </div>
       </div>
       <div class="hero hero--right">
         <img
