replaced div to ul on activities

--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -52,31 +52,33 @@ Activities must have a background of #FEFAF5
           <h1 class="title">Hawaii</h1>
           <div class="card-parent">
             <div class="card">
-              <div>
-                <div class="card__item card__item-title"><h3>Friday</h3></div>
-                <div class="card__item card__item-text">Breakfast</div>
-                <div class="card__item card__item-text">Lunch</div>
-                <div class="card__item card__item-text">Dinner</div>
-                <div class="card__item card__item-text">Snorkeling</div>
-              </div>
+              <ul class="card__list">
+                <li class="card__item card__item-title"><h3>Friday</h3></li>
+                <li class="card__item card__item-text">Breakfast</li>
+                <li class="card__item card__item-text">Lunch</li>
+                <li class="card__item card__item-text">Dinner</li>
+                <li class="card__item card__item-text">Snorkeling</li>
+              </ul>
             </div>
 
             <div class="card">
-              <div>
-                <div class="card__item card__item-title"><h3>Saturday</h3></div>
-                <div class="card__item card__item-text">Breakfast</div>
-                <div class="card__item card__item-text">Lunch</div>
-                <div class="card__item card__item-text">Dinner</div>
-                <div class="card__item card__item-text">Snorkeling</div>
-              </div>
+              <ul class="card__list">
+                <li class="card__item card__item-title"><h3>Saturday</h3></li>
+                <li class="card__item card__item-text">Breakfast</li>
+                <li class="card__item card__item-text">Lunch</li>
+                <li class="card__item card__item-text">Dinner</li>
+                <li class="card__item card__item-text">Snorkeling</li>
+              </ul>
             </div>
             <div class="card">
-              <div>
-                <div class="card__item card__item-title"><h3>Sunday</h3></div>
-                <div class="card__item card__item-text">Breakfast</div>
-                <div class="card__item card__item-text">Lunch</div>
-                <div class="card__item card__item-text">Dinner</div>
-                <div class="card__item card__item-text">Snorkeling</div>
+              <div class="card">
+                <ul class="card__list">
+                  <li class="card__item card__item-title"><h3>Sunday</h3></li>
+                  <li class="card__item card__item-text">Breakfast</li>
+                  <li class="card__item card__item-text">Lunch</li>
+                  <li class="card__item card__item-text">Dinner</li>
+                  <li class="card__item card__item-text">Snorkeling</li>
+                </ul>
               </div>
             </div>
           </div>
